styling for text, tried fixing join button styling but i suck too much

--- a/music_together/static/style.css
+++ b/music_together/static/style.css
@@ -14,6 +14,14 @@ li.navbar{
     padding: 4px;
     background-color: lightgrey;
 }
+.current-user-text{
+    display: flex;
+    font-size: small;
+    float: right;
+    margin-right: 7%;
+    font-weight: 800;
+}
+
 .error{
     width: 40%;
     border: 1px solid black;
@@ -91,7 +99,8 @@ li.navbar{
     display: flex;
     flex: 1;
     justify-content: center;
-    padding-top: 2%;
+    padding-top: 1.5%;
+    width: auto;
     
 }
 .room-join-button:hover{
